# haskell-learning

./: .gitignore  11_Folding_Exercises.hs  15_IO.hs  1668a.hs  17_Monads.hs  231a.hs  4_Lists_and_Tuples.hs  5_List_Exercises.hs  6_Higher_Order_Functions.hs  8_Function_Composition.hs  9_Folding.hs  Cargo.toml  README.md  array_sum.hs  cpp_comparison.cpp  haskell-next.md  pyramid.hs
H99/: 11to20.hs  1to10.hs  21to30.hs  info.txt
Hagen/: 01_Decl_vs_impe.hs  02_Functions.hs  03_Recursion.hs  04_Lists_and_Tuples.hs  05_List_Exercises.hs  06_Higher_Order_Functions.hs  07_Partial_Function_Application_and_Currying.hs  08_Function_Composition.hs  09_Folding.hs  10_Datatypes.hs  11_Folding_Exercises.hs  12_Records.hs  13_Typeclasses.hs  14_Maybe.hs  15_IO.hs  16_Typeinference.hs  17_Monads.hs  18_QuickCheck.hs  19_Infinite_Lists.hs  2_Functions.hs  38_Monad_Transformers.hs  7_Partial_Function_Application_and_Currying.hs
LP/: ListaDeExercicios1.sml  OEL.sml  OEL_closures.sml  lista2.sml
LP/Lista3/: 3.5.py  aliasing.cpp  asm.c  cargs.c  ref.py  swap.c  swap.cpp
Tsoding/music/: Music.hs
Tsoding/tictactoe/: .cabal-fmt-11656-OPoCqkPchc9q  CHANGELOG.md  README.md  demo.hs  glut32.dll.dummy  glut32.dll.gitkeep  package.yaml  tictactoe.cabal
Tsoding/tictactoe/app/: Game.hs  Logic.hs  Main.hs  Rendering.hs
Tsoding/tictactoe/src/: Logic.hs  Main.hs
WikiBooks/: basic.hs  readme.md
basicsHs/: 01.CallingFunctions.hs  02.MyFirstProgram.hs  03.PureFunctions.hs  04.Fmap.hs  05ListMonad.hs  README.md
categoryTheory/: compose.cpp  info.md
categoryTheory/Chapter2/: bool_self.cpp  factorial.cpp  makefile  memoize.cpp  memoize.gpt.cpp  memoize.gpt.hs  memoize.gpt.py  memoize.gpt.rs  memoize.gpt.ts  pure_impure.cpp
categoryTheory/Chapter4/: chall_code_report.apl  chall_code_report.cpp  challenge.cpp  kleisli.md  writer.cpp  writer.hs
categoryTheory/Chapter5/: prod.cpp  prod.hs
categoryTheory/Chapter6/: ADT.cpp  ADT.hs  Ex2.java
categoryTheory/Chapter7/: camarao.hs  file_io.hs  functors.cpp  functors.hs  readme.md
categoryTheory/Monads/: cat.hs  state.hs
cf/: .favorite_sequence.hs.swp  .gitignore  CanISquare.hs  CreatingWords.hs  DaytonaCost.hs  GameWithIntegers.hs  MakeItWhite.hs  MaximumMultipleSum.hs  MyFirstSortingProblem.hs  NotQuiteLatinSquare.hs  OddOneOut.hs  RudolfAndTheTicket.hs  Square.hs  StairPeakNeither.hs  YogurtSale.hs  a+b_again?.hs  bit.hs  clean.sh  collect.hs  company.hs  cubes.cpp  cubes.hs  even-odd.hs  exp.hs  fair.hs  favorite_sequence.hs  favorite_sequence.py  floor.hs  for.hs  hex.hs  in.txt  minutes.hs  night.hs  odd_set.hs  panoramix.hs  park_lighting.hs  rank.hs  rockPaperScissors.hs  special_permutation.hs  sum.hs  (+2 more)
cf/231/: a.hs  by_Negativez2.hs  makefile
cf/71/: a.hs  out.txt
cf/THE_FIRST_PROBLEMS/: what_sum.hs
cf/hanoi/: hanoi.hs
dmoj/koala/: Cargo.toml  koala.hs  koala.lean
dmoj/rock-paper-scissors/: paper.lean  rock.hs
hpffp/: 04BasicDatatypes.hs  05Types.hs  06Typeclasses.hs  07Func.ts  07FuncPatterns.hs  07grid.c  08Recursion.hs  09Lists.hs  10Folding.hs  11ADT.hs  12SignalingAdversity.hs  Cipher.hs  knight.cpp  knight.hs  let.hs
hpffp/03Strings/: 03Strings.hs
hpffp/05Types/: 05Types.hs
hpffp/06Typeclasses/: 06Typeclasses.hs
hpffp/07FunctionalPatterns/: 07Func.ts  07grid.c
hpffp/08Recursion/: .08Recursion.hs.bkp  08Recursion.cabal  CHANGELOG.md
hpffp/08Recursion/src/: WordNumber.hs
hpffp/08Recursion/tests/: tests.hs
hpffp/09Lists/: 09Lists.hs
hpffp/10Folding/: 10Folding.hs
hpffp/11ADT/: 11ADT.hs
hpffp/13BuildingProjects/cabal-demo/: CHANGELOG.md  cabal-demo.cabal
hpffp/13BuildingProjects/cabal-demo/app/: Main.hs
hpffp/13BuildingProjects/hangmann/: CHANGELOG.md  hangmann.cabal
hpffp/13BuildingProjects/hangmann/app/: Main.hs
hpffp/13BuildingProjects/hangmann/data/: cleanWords.hs  dirtyWords.txt
hpffp/13BuildingProjects/hangmann/src/: Hangmann.hs
hpffp/13BuildingProjects/hangmann/tests/: Main.hs
hpffp/14Testing/: helloquickcheck.hs  usingquickcheck.hs
hpffp/14Testing/addition/: CHANGELOG.md  addition.cabal
hpffp/14Testing/addition/src/: Addition.hs
hpffp/14Testing/morse/: CHANGELOG.md  LICENSE  morse.cabal
hpffp/14Testing/morse/app/: Main.hs
hpffp/14Testing/morse/src/: Morse.hs
hpffp/14Testing/morse/tests/: tests.hs
hpffp/15MonoidSemigroup/: Monoid.hs  NonEmpty.hs  betterCheck.hs  maybeMonoid.hs
hpffp/16Functor/: 0functor.hs  1_IOfunctor.hs  2_natural.hs  3_funique.hs
hpffp/17Applicative/: 0applicative.hs
hpffp/18Monad/: 0_monad.hs
hpffp/18Monad/exercise/: CHANGELOG.md  exercise.cabal
hpffp/18Monad/exercise/app/: Main.hs
hpffp/18Monad/exercise/src/: Exer.hs
hpffp/20Foldable/: foldableclass.hs
hpffp/21Traversable/: 1_traverse.hs  2_instances.hs  traverse.hs
hpffp/22Reader/: 0_new_beginning.hs  1_reader_practice.hs  2_ufabc_hal.hs
hpffp/22Writer/: 0_ufabc.hs
hpffp/23State/: 23State.cabal  CHANGELOG.md  Game.hs  Intro.hs  Tree.hs
hpffp/24ParserCombinators/: 24ParserCombinators.cabal  CHANGELOG.md
hpffp/25ComposingTypes/: 1ComposingTypes.hs  2CommonFunctionsAsTypes.hs  3TwoLittleFunctorsSittinInATreeL-I-F-T-I-N-G.hs  4Twinplicative.hs  5Twonad.hs  6Exercises.hs  7MonadTransformers.hs  8IdentityT.hs  9FindingAPattern.hs
hpffp/26MonadTransformers/: 0MotivatingExample.hs  1MonadTransformers.hs  2MaybeT.hs  3EitherT.hs  4ReaderT.hs  5StateT.hs  6TypesYouProbablyDontWantToUse.hs  7RecoveringTheOrdinaryTypeFromTheTransformer.hs  8LexicallyInnerIsStructurallyOuter.hs
hpffp/works/: Cipher.hs  knight.cpp  knight.hs
kattis/: brent_last_factorial_digit.hs  in.txt  last_factorial_digit.hs  word_equations.py
mmhaskell/: newop.hs
mmhaskell/Workbook/: README  Workbook.cabal
readworldhaskell/: 15.ProgrammingWithMonads.hs
sandbox/: Ycombinator.hs  bookWordCount.hs  combinators.hs  gadt.hs  hp1.txt  matrix.hs  maybemath.hs  stack.hs  void.hs
schoolofhaskell/: 11.StateMonad.hs
servant/: 0_type_level.hs  info.txt
skillsMatter/hcat/: CHANGELOG.md  abcs.txt  example.txt  hcat.cabal  largelines.txt
skillsMatter/hcat/app/: Main.hs
skillsMatter/hcat/src/: HCat.hs
(+71 files in other folders)
