name:                tictactoe
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tictactoe#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2023 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

-- library
--   hs-source-dirs:      src 
--   build-depends:       base >= 4.7 && < 5,
--                        gloss,
--                        array
--   exposed-modules:     Game,
--                        Logic,
--                        Rendering


executable tictactoe
  hs-source-dirs:      app 
  main-is:             Main.hs
  other-modules:       Logic,
                       Game,
                       Rendering
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , gloss
                     , array
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
