cabal-version:      3.0
name:               WordNumber
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             bernborgess
maintainer:         bernborgess@outlook.com
-- copyright:
category:           Codec
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  WordNumber
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite tests
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          tests.hs
    build-depends:    base ^>=4.16.4.0
                    , QuickCheck
                    , WordNumber
                    , hspec

