cabal-version:      2.4
name:               hcat
version:            0.1.0.0
author:             bernborgess
maintainer:         bernborgess@outlook.com

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  HCat
    build-depends:    base ^>=4.16.4.0
                    , bytestring
                    , directory
                    , process
                    , text
                    , time
    hs-source-dirs:   src
    default-language: Haskell2010


executable hcat
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0
                    , hcat
    hs-source-dirs:   app
    default-language: Haskell2010
