cabal-version:      2.4
name:               hangmann
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Playing Hangman

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             bernborgess
maintainer:         bernborgess@outlook.com

-- A copyright notice.
-- copyright:
category: Game
extra-source-files: CHANGELOG.md

executable hangmann
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base ^>=4.16.4.0
                    , random == 1.1
                    , split == 0.2.2
    default-language: Haskell2010
    