cabal-version:      2.4
name:               hangmann
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Playing Hangman

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             bernborgess
maintainer:         bernborgess@outlook.com

-- A copyright notice.
-- copyright:
category: Game
extra-source-files: CHANGELOG.md


common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Hangmann
    build-depends:    base ^>=4.16.4.0
                    , random ^>=1.0.0
                    , ansi-terminal 
    hs-source-dirs:   src
    default-language: Haskell2010

executable hangmann
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base ^>=4.16.4.0
                    , random ^>=1.0.0
                    , ansi-terminal 
                    , hangmann

    default-language: Haskell2010

test-suite tests
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   tests
    build-depends:    base ^>=4.16.4.0
                    , QuickCheck
                    , hangmann
                    , hspec
    default-language: Haskell2010
   