cabal-version:      3.0
name:               addition
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             bernborgess
maintainer:         bernborgess@outlook.com
-- copyright:
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    exposed-modules:  Addition
    build-depends:    base ^>=4.16.4.0
                    , hspec
                    , QuickCheck
    hs-source-dirs:   src
    default-language: Haskell2010
    import:           warnings
    -- other-modules:
    -- other-extensions:

test-suite addition-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        addition
