cabal-version:      3.0
name:               morse
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             bernborgess
maintainer:         bernborgess@outlook.com
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable morse
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        morse

    hs-source-dirs:   app
    default-language: Haskell2010
