cabal-version:      3.0
name:               exercise
version:            0.1.0.0
synopsis:
homepage:
license:            NONE
author:             bernborgess
maintainer:         bernborgess@outlook.com
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Exer
    build-depends:    base ^>=4.16.4.0
                    , QuickCheck
                    , checkers
    hs-source-dirs:   src
    default-language: Haskell2010

executable exercise
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0
                    , exercise
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite exercise-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.16.4.0
